# rust-esp32-waveshare-4_2

./: Cargo.toml  README.md  build.rs  sdkconfig.defaults
src/: main.rs
